Actualización de README y configuración de ejemplo

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,26 @@
-# Variables de entorno de ejemplo
+# === n8n (host local) ===
 N8N_HOST=localhost
 N8N_PORT=5678
 N8N_PROTOCOL=http
+GENERIC_TIMEZONE=America/Lima
 
-# Credenciales de la base de datos
+# === Base de datos (sqlite por defecto) ===
 DB_TYPE=sqlite
-DB_SQLITE_PATH=/root/.n8n/database.sqlite
+DB_SQLITE_PATH=/home/node/.n8n/database.sqlite
 
-# Configuración de seguridad
+# === Seguridad (solo ejemplo) ===
 N8N_BASIC_AUTH_ACTIVE=true
 N8N_BASIC_AUTH_USER=admin
 N8N_BASIC_AUTH_PASSWORD=changeme
 
-# API Keys y tokens (reemplazar con tus propias claves)
-OPENAI_API_KEY=your_openai_api_key_here
+# === API de IA ===
+OPENAI_API_KEY=REEMPLAZA_CON_TU_CLAVE
 OPENAI_MODEL=gpt-4o
 
-# === Web ===
+# === App web ===
 PORT=3000
 
-# === n8n ===
-N8N_HOST=localhost
-N8N_PORT=5678
-N8N_BASIC_AUTH_ACTIVE=true
-N8N_BASIC_AUTH_USER=admin
-N8N_BASIC_AUTH_PASSWORD=cambia_esto
+# === WordPress / otro ===
+WP_BASE_URL=https://tu-dominio.com
+WP_APP_USER=tu_usuario_api
+WP_APP_PASSWORD=tu_clave_app
